# shadow-rs

./: .clippy.toml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  shadow-rs.spec
.github/workflows/: audit.yml  ci.yml
benches/: benchmark.sh
docker/: Dockerfile.e2e
docs/: FREEBSD-NETBSD-REFERENCE.md  OPENBSD-REFERENCE.md  SECURITY-HARDENING.md
docs/man/: chage.1.md  chfn.1.md  chpasswd.8.md  chsh.1.md  groupadd.8.md  groupdel.8.md  groupmod.8.md  grpck.8.md  newgrp.1.md  passwd.1.md  pwck.8.md  useradd.8.md  userdel.8.md  usermod.8.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_group_parse.rs  fuzz_gshadow_parse.rs  fuzz_login_defs_parse.rs  fuzz_passwd_parse.rs  fuzz_shadow_parse.rs  fuzz_validate_username.rs
src/shadow-core/: Cargo.toml
src/shadow-core/src/: atomic.rs  audit.rs  crypt.rs  error.rs  group.rs  hardening.rs  lib.rs  lock.rs  login_defs.rs  nscd.rs  pam.rs  passwd.rs  process.rs  selinux.rs  shadow.rs  skel.rs  sysroot.rs  validate.rs
src/uu/chage/: Cargo.toml
src/uu/chage/locales/: en-US.ftl
src/uu/chage/src/: chage.rs
src/uu/chfn/: Cargo.toml
src/uu/chfn/locales/: en-US.ftl
src/uu/chfn/src/: chfn.rs
src/uu/chpasswd/: Cargo.toml
src/uu/chpasswd/locales/: en-US.ftl
src/uu/chpasswd/src/: chpasswd.rs
src/uu/chsh/: Cargo.toml
src/uu/chsh/locales/: en-US.ftl
src/uu/chsh/src/: chsh.rs
src/uu/groupadd/locales/: en-US.ftl
src/uu/groupadd/src/: groupadd.rs
src/uu/groupdel/locales/: en-US.ftl
src/uu/groupdel/src/: groupdel.rs
src/uu/groupmod/locales/: en-US.ftl
src/uu/groupmod/src/: groupmod.rs
src/uu/grpck/locales/: en-US.ftl
src/uu/grpck/src/: grpck.rs
src/uu/newgrp/: Cargo.toml
src/uu/newgrp/locales/: en-US.ftl
src/uu/newgrp/src/: newgrp.rs
src/uu/passwd/: Cargo.toml
src/uu/passwd/locales/: en-US.ftl
src/uu/passwd/src/: passwd.rs
src/uu/pwck/: Cargo.toml
src/uu/pwck/locales/: en-US.ftl
src/uu/pwck/src/: main.rs  pwck.rs
src/uu/useradd/: Cargo.toml
src/uu/useradd/locales/: en-US.ftl
src/uu/useradd/src/: useradd.rs
src/uu/userdel/locales/: en-US.ftl
src/uu/userdel/src/: userdel.rs
src/uu/usermod/locales/: en-US.ftl
src/uu/usermod/src/: usermod.rs
tests/by-util/: test_chage.rs  test_chfn.rs  test_chpasswd.rs  test_passwd.rs  test_usermod.rs
tests/common/: mod.rs
tests/e2e/: ansible-test.yml  deploy-test.sh
util/: generate-completions.sh
