[package]
name = "uu_newgrp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "newgrp command (shadow-rs)"

[lib]
path = "src/newgrp.rs"

[[bin]]
name = "newgrp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true, features = ["group", "gshadow", "crypt"] }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
