[package]
name = "uu_passwd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "passwd command — change user password (shadow-rs)"

[lib]
path = "src/passwd.rs"

[[bin]]
name = "passwd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "login-defs"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
